@@ -299,8 +299,10 @@ Bug Fixes:
     attribute flags (Issue 361).
  -- Fix LOG_DIR across @restarts (Issue 46).
  -- Drop dependency on QueryPerformanceCounter() (Issue 369).
- -- The flag_access configuration handler would SIGSEGV if a flagname was
-    given without an permissions.
+ -- The flag_access configuration handler would SIGSEGV if a flagname
+    was given without a list of permissions.
+ -- The power_alias and flag_alias configuration handlers would
+    SIGSEGV if flagname and alias were not both given.
 
 
 Performance Enhancements:
